--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -1,3 +1,122 @@
-.input {
-  display: block;
+
+.container {
+  --primary-background-color: #00b194;
+  --pimary-text-color: #fff;
+
+  width: calc(100vw - 32px);
+  margin: 1rem;
+
+  .header {
+    padding: 2rem;
+    border: 1px solid transparent;
+    color: var(--pimary-text-color);
+    background-color: var(--primary-background-color);
+    position: relative;
+    margin-top: 5rem;
+
+    .user-initials {
+      position: absolute;
+      left: 50%;
+      top: 0;
+      transform: translate(-50%, -50%);
+      height: 7rem;
+      width: 7rem;
+      background-color: white;
+      color: #000;
+      border: 1px solid transparent;
+      border-radius: 3.5rem;
+
+      .initials-wrapper {
+        position: relative;
+        display: block;
+        width: 100%;
+        height: 100%;
+
+        .initials {
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+          font-size: 3rem;
+          font-weight: bold;
+        }
+      }
+    }
+
+    .user-name,
+    .user-address {
+      width: 100%;
+      text-align: center;      
+      line-height: 1.5rem;
+      text-transform: capitalize;
+    }
+
+    .user-name {
+      margin-top: 3rem;
+      font-size: 1.5rem;
+    }
+
+    .user-address {
+      font-size: 1rem;
+    }
+  }
+
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  form {
+    margin: 2rem auto;
+    display: grid;
+    grid-template-columns: auto;
+    row-gap: 1rem;
+
+    .item-group {
+      display: grid;
+      grid-template-columns: auto;
+      row-gap: 0.25rem;
+
+      .input {
+        display: block;
+        height: 2rem;
+        padding: 0.3rem 0.7rem;
+        width: fill-available;
+        margin-top: 0.25rem;
+        text-transform: capitalize;
+      }
+    }
+  }
+
+  .btn {
+    width: 10rem;
+    height: 2.5rem;
+    color: var(--pimary-text-color);
+    background-color: var(--primary-background-color);
+    border: 1px solid transparent;
+    margin-top: 2rem;
+    cursor: pointer;
+
+    &[disabled] {
+      cursor: not-allowed;
+    }
+  }
+
+  @media only screen and (min-width: 768px) {
+    width: 35rem;
+    margin: 6rem auto;
+    display: block;
+
+    .header {
+      margin-top: unset;
+    }
+
+    h1 {
+      font-size: unset;
+    }
+
+    form {
+      grid-template-columns: auto auto;
+      column-gap: 1rem;
+    }
+  }
 }
